--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,86 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+		{% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{% block javascripts %}
+			{% block importmap %}
+				{{ importmap('app') }}
+			{% endblock %}
+		{% endblock %}
+	</head>
+	<body>
+		<div class="grid">
+			<header class="container-header">
+				<div class="logo-image">
+					<img src="{{ asset('images/icons/logo-my-market.png') }}" alt="Logo su site my market">
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<a href="#">
+								<imgsrc="{{asset('images/icons/file-text.png')}}" alt="icon document">Comptabilité</a>
+							</li>
+						</li>
+						<li>
+							<a href="#">
+								<imgsrc="{{asset('images/icons/shopping-bag.png')}}" alt="icon panier">Produits</a>
+							</li>
+						</li>
+						<li>
+							<a href="#">
+								<imgsrc="{{asset('images/icons/truck.png')}}" alt="icon truc">Fournisseur</a>
+							</li>
+						</li>
+						<li>
+							<a href="#">
+								<imgsrc="{{asset('images/icons/archive.png')}}" alt="icon carton">Commandes</a>
+							</li>
+						</li>
+						<li>
+							<a href="#">
+								<imgsrc="{{asset('images/icons/settings.png')}}" alt="icon gear">Paramètres</a>
+							</li>
+						</li>
+					</ul>
+				</nav>
+			</header>
+			{% block body %}
+
+			{% endblock %}
+		</div>
+
+        {% for type, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="message-flash {{ type }}">
+                    {{message}}
+                </div>
+            {% endfor %}
+        {% endfor %}
+        <script>
+            // au bout de quelques secondes :
+            setTimeout(() => { // je reucpere les div que je veux manipuler dans le dom
+                let flashes = document.querySelectorAll(".message-flash")
+                // pour chacun des messages flash =>
+                if (flashes) {
+                    flashes.forEach(elt => { // je fais descendre la div
+                        elt.style.bottom = "-100px";
+                        // une fois l'naimation terminée
+                        setTimeout(() => {
+                            elt.remove()
+                        }, 1000)
+                        // je supprime la div
+                    })
+                }
+            }, 4000)
+        </script>
+	</body>
 </html>
