feat(security):add registration and authentication

--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -3,18 +3,14 @@
 {% block title %}Hello AppController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>D:/Webecom/Projets/aout/mymarket/src/Controller/AppController.php</code></li>
-        <li>Your template at <code>D:/Webecom/Projets/aout/mymarket/templates/app/index.html.twig</code></li>
-    </ul>
-</div>
+    <div class="container">
+        <h1>Page d'accueil du site</h1>
+        {% if app.user %}
+            <p>Bienvenue, {{ app.user.email }}!</p>
+            {% if is_granted("ROLE_ADMIN") %}
+                <p>Vous avez des privilèges d'administrateur.</p>
+            {% else %}
+                <p>Vous n'avez pas de privilèges d'administrateur.</p>
+            {% endif %}
+        {% endif %}
 {% endblock %}
